--- a/01-curso/package.json
+++ b/01-curso/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "faker": "^5.5.3",
+    "fetch": "^1.1.0",
     "git": "^0.1.5",
     "graphql": "^15.8.0",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "node-fetch": "^2.6.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
